reconfigured the reposistory

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,17 @@
 FROM python:3.11.4
 
-WORKDIR /inventory_management/app/
+WORKDIR /chatbot/app/
 
 RUN ls -lha
-COPY ./app/requirements.txt requirements.txt
+COPY ./requirements.txt requirements.txt
 RUN python -m pip install --upgrade pip
 RUN python -m pip install -r requirements.txt
 RUN ls -lha
 
-WORKDIR /inventory_management/
+WORKDIR /chatbot/
 RUN ls -lha
 COPY . .
 RUN ls -lha
 RUN realpath main.py
-ENV PYTHONPATH=/inventory_management
+ENV PYTHONPATH=/chatbot
 CMD alembic upgrade head && python main.py
